currency-exchange-microservice/http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 88
      name: http
      protocol: HTTP
    hosts:
    - "*"
