currency-exchange-microservice/virtualservice-all-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtual-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
    - match:
        - uri:
            exact: /currency-exchange
      route:
        - destination:
            host: currency-exchange
            port:
              number: 8000
    - match:
        - uri:
            prefix: /currency-conversion
      route:
        - destination:
            host: currency-conversion
            port:
              number: 8100
